fix blurry images by adjusting to 640x120

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,10 @@ footer {
   background-size: contain;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  width: 576px;
-  height: 108px;
-  /* width: 640px;
-  height: 120px; */
+  /* width: 576px;
+  height: 108px; */
+  width: 640px;
+  height: 120px;
   /* Leo's is 640x120 so this is same aspect ratio of 5.333...*/
   display: flex;
   vertical-align: center;
@@ -39,14 +39,14 @@ footer {
 }
 
 #image {
-  margin: 11.5px;
+  margin: 12px;
   vertical-align: center;
 }
 #text {
-  margin: 10px 5px;
-  max-width: 445px;
-  max-height: 85px;
-  line-height: 1.3;
+  margin: 12px 5px;
+  max-width: 500px;
+  max-height: 96px;
+  line-height: 1.25;
   overflow: hidden;
   word-break: break-all;
   /* text-overflow: ellipsis; */
@@ -57,6 +57,10 @@ footer {
 #text p {
   margin: 0;
   white-space: pre-wrap;
+}
+
+#subject {
+  font-size: 18px;
 }
 
 .download {
